definido el servicio para reproducir audio

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
                   android:screenOrientation="landscape"
              />
 
+        <service android:name=".RaceMusic"></service>
+
 
     </application>
 
